# fna_control_tower

./: .gitignore  DEMO.md  DEPLOYMENT_TEST_INSTRUCTIONS.md  E2E_TEST_GUIDE.md  README.md  TASKS.md  TESTING_DELIVERABLES.md  TEST_DOCUMENTATION_INDEX.md  TEST_SELECTORS_REFERENCE.md  TEST_SETUP_SUMMARY.md  databricks.yml  deploy.py
.claude/: settings.local.json
app/: CHANGES_SUMMARY.md  DEBUGGING_GUIDE.md  QUICK_DIAGNOSIS.txt  TEST_RESULTS.md  UI_TEST_CHECKLIST.md  UX_TESTING_REPORT.md  app.yaml  pyproject.toml  requirements.txt
app/backend/: chat.py  config.py  db.py  escalate.py  invoice_pdf.py  lakebase.py  main.py  streams.py
app/backend/static/: index.html
app/backend/static/assets/: index-BF31HP1V-v3.js  index-BU1s3Ctf-v3.js  index-CE62_yg0-v3.js  index-CHkMai4d-v3.css  index-CUssDhSz-v3.js  index-Hey_Ugrc-v3.css  index-LAjYoiBc-v3.css  index-UyzDQ9wd-v3.css  index-dwxh3Xk9-v3.js
app/frontend/: index.html  package-lock.json  package.json  vite.config.ts
app/frontend/src/: App.tsx  index.css  utils.ts
app/frontend/src/components/: AIChatPanel.tsx  APTab.tsx  ARTab.tsx  ExceptionDrawer.tsx  GLTab.tsx  GreetingBanner.tsx  InvoiceDrawer.tsx  MetricCard.tsx  SummaryCard.tsx
app/frontend/src/hooks/: useMetrics.ts  useSSE.ts
notebooks/: 00_Setup_and_Data_Generation.py  01_DLT_Pipeline.py  02_Gold_Layer_P2P.py  03_Gold_Layer_O2C.py  04_Gold_Layer_R2R.py  05_Invoice_AI_Processing.py  06_Create_KPI_View.py  06_Genie_Space_Setup.py  07_Create_Genie_Space.py  08_Configure_Genie_Space.py  fins_01_data_generator.py  fins_02_dlt_pipeline.py
tests/: run_tests.sh  (+4 more)
(+4 files in other folders)
